unpackaged/main/default/objects/Plan_de_Venta__c/fields/Paquetes_Promociones_de_Venta_Duplicadas__c.field-meta.xml
<CustomField>
    <fullName>Paquetes_Promociones_de_Venta_Duplicadas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este flag y ruta se activa automáticamente cuando se agregan al plan de venta 2 o más productos iguales, considerando el nombre de los Paquetes y/o Promociones.</description>
    <label>Paquetes/Promociones de Venta Duplicadas</label>
    <type>Checkbox</type>
</CustomField>