unpackaged/main/default/objects/Plan_de_Venta__c/fields/Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta__c</fullName>
    <formula>&quot;Plan de Venta&quot; &amp; &quot; &quot;&amp;  Oportunidad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan de Venta</label>
    <type>Text</type>
</CustomField>