unpackaged/main/default/objects/Plan_de_Venta__c/fields/Plan_de_Venta_Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta_Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan de Venta Aprobado</label>
    <type>Checkbox</type>
</CustomField>