unpackaged/main/default/objects/Plan_de_Venta__c/fields/Plan_de_Venta_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Plan_de_Venta__c/&quot;&amp; Id &amp;&quot;/view&quot;, Plan_de_Venta_TXT__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan de Venta</label>
    <type>Text</type>
</CustomField>