unpackaged/main/default/objects/Plan_de_Venta__c/fields/Plan_de_Venta_Original__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta_Original__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de Venta Original</label>
    <referenceTo>Plan_de_Venta__c</referenceTo>
    <relationshipLabel>Plan de Venta</relationshipLabel>
    <relationshipName>Plan_de_Venta</relationshipName>
    <type>Lookup</type>
</CustomField>