unpackaged/main/default/objects/Plan_de_Venta__c/fields/Plan_de_Venta_TXT__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta_TXT__c</fullName>
    <formula>Oportunidad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan de Venta</label>
    <type>Text</type>
</CustomField>