unpackaged/main/default/objects/Plan_de_Venta__c/fields/Plazo__c.field-meta.xml
<CustomField>
    <fullName>Plazo__c</fullName>
    <description>Es el plazo que se le dará al cliente para pagar su financiamiento preventa.</description>
    <label>Plazo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>