unpackaged/main/default/objects/Plan_de_Venta__c/fields/Plazo_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Autorizado__c</fullName>
    <formula>TEXT(Lista_de_Precios_Financiamien_Reciente__r.Plazos__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plazo Autorizado</label>
    <type>Text</type>
</CustomField>