unpackaged/main/default/objects/Plan_de_Venta__c/fields/Plazo_Mayor_al_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Mayor_al_Autorizado__c</fullName>
    <formula>IF( Plazo__c  &gt; VALUE(Plazo_Autorizado__c), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plazo Mayor al Autorizado?</label>
    <type>Checkbox</type>
</CustomField>