unpackaged/main/default/objects/Plan_de_Venta__c/fields/Porcentaje_a_Financiar__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_a_Financiar__c</fullName>
    <formula>(  Diferencia_a_Pagar_PlainField__c / Valor_Venta_PlainField__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje a Financiar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>