unpackaged/main/default/objects/Plan_de_Venta__c/fields/Porcentaje_Descuento_Pre_autorizado__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Descuento_Pre_autorizado__c</fullName>
    <formula>Lista_de_Precios_Bonificacion_Reciente__r.Porcentaje_Bonificacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Descuento Pre-autorizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>