unpackaged/main/default/objects/Plan_de_Venta__c/fields/Porcentaje_Fin_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Fin_Autorizado__c</fullName>
    <formula>trCalc_Porcentaje_Fin_Autorizado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje Fin Autorizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>