unpackaged/main/default/objects/Plan_de_Venta__c/fields/Prcnt_Financiamiento_Mayor_al_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Prcnt_Financiamiento_Mayor_al_Autorizado__c</fullName>
    <formula>IF(Porcentaje_a_Financiar__c &gt; Porcentaje_Fin_Autorizado__c, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Financiamiento Mayor al Autorizado?</label>
    <type>Checkbox</type>
</CustomField>