unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <formula>trCalc_Precio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio de Lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>