unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Area_Municipal__c.field-meta.xml
<CustomField>
    <fullName>Precio_Area_Municipal__c</fullName>
    <formula>trCalc_Precio_Area_Municipal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Frente Área Municipal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>