unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Base_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Precio_Base_Vivienda__c</fullName>
    <formula>IF(BLANKVALUE(Precio_Venta_Anticipada_Monto__c,0)&gt;0,	Precio_Venta_Anticipada_Monto__c,
			IF(BLANKVALUE(Promocion_de_Precio_monto__c,0)&gt;0,Promocion_de_Precio_monto__c,
			    IF(BLANKVALUE(Precio_Unitario__c,0)&gt;0,Precio_Unitario__c,
										Precio__c)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Base Vivienda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>