unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Esquina__c.field-meta.xml
<CustomField>
    <fullName>Precio_Esquina__c</fullName>
    <formula>trCalc_Precio_Esquina__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Esquina</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>