unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Frente_Parque__c.field-meta.xml
<CustomField>
    <fullName>Precio_Frente_Parque__c</fullName>
    <formula>trCalc_Precio_Frente_Parque__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Sobre Parque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>