unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Instalaciones__c.field-meta.xml
<CustomField>
    <fullName>Precio_Instalaciones__c</fullName>
    <formula>trCalc_Precio_Instalaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Instalaciones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>