unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Lado_Sol__c.field-meta.xml
<CustomField>
    <fullName>Precio_Lado_Sol__c</fullName>
    <formula>trCalc_Precio_Lado_Sol__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Lado Sol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>