unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Lista_con_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Precio_Lista_con_Descuento__c</fullName>
    <formula>Precio__c - Importe_Descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Lista con Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>