unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Lista_con_Descuento_Plain_Field__c.field-meta.xml
<CustomField>
    <fullName>Precio_Lista_con_Descuento_Plain_Field__c</fullName>
    <label>Precio Lista con Descuento Plain Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>