unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Minimo_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_Minimo_de_Venta__c</fullName>
    <formula>Precio_Base_Vivienda__c - Monto_Descuento_Pre_autorizado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Mínimo de Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>