unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_minimo_solicitado__c.field-meta.xml
<CustomField>
    <fullName>Precio_minimo_solicitado__c</fullName>
    <formula>trCalc_Precio_minimo_solicitado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio mínimo solicitado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>