unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_por_m2_exc__c.field-meta.xml
<CustomField>
    <fullName>Precio_por_m2_exc__c</fullName>
    <formula>trCalc_Precio_por_m2_exc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio por m² exc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>