unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_por_m2_exc_PlainField__c.field-meta.xml
<CustomField>
    <fullName>Precio_por_m2_exc_PlainField__c</fullName>
    <label>Precio por m² exc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>