unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Seleccionado__c.field-meta.xml
<CustomField>
    <fullName>Precio_Seleccionado__c</fullName>
    <formula>IF( Venta_Anticipada__c,  Precio_Venta_Anticipada__c ,  Precio_Venta_Normal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Seleccionado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>