unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Sobre_Avenida__c.field-meta.xml
<CustomField>
    <fullName>Precio_Sobre_Avenida__c</fullName>
    <formula>trCalc_Precio_Sobre_Avenida__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Sobre Avenida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>