unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Superficie_Excedente__c.field-meta.xml
<CustomField>
    <fullName>Precio_Superficie_Excedente__c</fullName>
    <formula>trCalc_Precio_Superficie_Excedente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Superficie Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>