unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Total_Vivenda__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total_Vivenda__c</fullName>
    <formula>(Precio_Base_Vivienda__c  + Terreno_Excedente__c + Importe_Condiciones_Especiales__c) - Importe_Descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Este precio calcula el &quot;Precio de Lista&quot; - Monto Descuento  + Atributos + Monto m² Excedente</inlineHelpText>
    <label>Precio Total Vivenda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>