unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Precio_Unitario__c</fullName>
    <formula>trCalc_Precio_Unitario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>