unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Venta_Anticipada__c.field-meta.xml
<CustomField>
    <fullName>Precio_Venta_Anticipada__c</fullName>
    <formula>100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Venta Anticipada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>