unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Venta_Anticipada_Monto__c.field-meta.xml
<CustomField>
    <fullName>Precio_Venta_Anticipada_Monto__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Precio Venta Anticipada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>