unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Venta_Normal__c.field-meta.xml
<CustomField>
    <fullName>Precio_Venta_Normal__c</fullName>
    <formula>trCalc_Precio_Venta_Normal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Venta Normal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>