unpackaged/main/default/objects/Plan_de_Venta__c/fields/Precio_Vivienda_Usado_Formula__c.field-meta.xml
<CustomField>
    <fullName>Precio_Vivienda_Usado_Formula__c</fullName>
    <formula>IF(BLANKVALUE(Precio_Venta_Anticipada_Monto__c,0)&gt;0, &quot;Precio Venta Anticipada&quot;,
IF(BLANKVALUE(Promocion_de_Precio_monto__c,0)&gt;0,&quot;Promocion de Precio&quot;,
IF(BLANKVALUE(Precio_Unitario__c,0)&gt;0,&quot;Precio Unitario&quot;,
   &quot;Precio de Lista&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Vivienda Usado</label>
    <type>Text</type>
</CustomField>