unpackaged/main/default/objects/Plan_de_Venta__c/fields/Primer_Pagare_Preventa_Manual__c.field-meta.xml
<CustomField>
    <fullName>Primer_Pagare_Preventa_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primer Pagaré Preventa Manual</label>
    <type>Checkbox</type>
</CustomField>