unpackaged/main/default/objects/Plan_de_Venta__c/fields/Prod_Bonif_menor_P_Min_Venta_Formula__c.field-meta.xml
<CustomField>
    <fullName>Prod_Bonif_menor_P_Min_Venta_Formula__c</fullName>
    <formula>IF(Cantidad_de_Promociones_y_Paquetes__c &gt; 0, 
			    IF(Valor_Operacion_Formula__c &lt; Precio_Minimo_de_Venta__c, 
										    TRUE, 
										    FALSE
									),
			    FALSE
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod + Bonif menor a P. Mínimo de Venta</label>
    <type>Checkbox</type>
</CustomField>