unpackaged/main/default/objects/Plan_de_Venta__c/fields/Producto_Bonificacion_menor_a_P_M_nim__c.field-meta.xml
<CustomField>
    <fullName>Producto_Bonificacion_menor_a_P_M_nim__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Producto + Bonificación menor a P. Mínimo de Venta</inlineHelpText>
    <label>Prod + Bonif menor a P. Mínimo de Venta</label>
    <type>Checkbox</type>
</CustomField>