unpackaged/main/default/objects/Plan_de_Venta__c/fields/Promocion_de_Precio__c.field-meta.xml
<CustomField>
    <fullName>Promocion_de_Precio__c</fullName>
    <formula>Lista_de_Precios_Promo_Precio_Reciente__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoción de Precio</label>
    <type>Text</type>
</CustomField>