unpackaged/main/default/objects/Plan_de_Venta__c/fields/Promocion_de_Precio_monto__c.field-meta.xml
<CustomField>
    <fullName>Promocion_de_Precio_monto__c</fullName>
    <label>Promoción de Precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>