unpackaged/main/default/objects/Plan_de_Venta__c/fields/Promociones__c.field-meta.xml
<CustomField>
    <fullName>Promociones__c</fullName>
    <label>Monto Total Promociones de Venta</label>
    <summarizedField>Producto_de_Plan_de_Venta__c.Precio_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Producto_de_Plan_de_Venta__c.Tipo_de_Producto__c</field>
        <operation>contains</operation>
        <value>Promo</value>
    </summaryFilterItems>
    <summaryForeignKey>Producto_de_Plan_de_Venta__c.Plan_de_Venta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>