unpackaged/main/default/objects/Plan_de_Venta__c/fields/Prototipo_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>Prototipo_Id_Formula__c</fullName>
    <formula>Oportunidad__r.Prototipo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prototipo Id Formula</label>
    <type>Text</type>
</CustomField>