unpackaged/main/default/objects/Plan_de_Venta__c/fields/Regalos_Mkt2__c.field-meta.xml
<CustomField>
    <fullName>Regalos_Mkt2__c</fullName>
    <label>Cantidad de Regalos Mkt</label>
    <summaryFilterItems>
        <field>Producto_de_Plan_de_Venta__c.Tipo_de_Producto__c</field>
        <operation>contains</operation>
        <value>MKT, Marketing</value>
    </summaryFilterItems>
    <summaryForeignKey>Producto_de_Plan_de_Venta__c.Plan_de_Venta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>