unpackaged/main/default/objects/Plan_de_Venta__c/fields/Representante_Legal__c.field-meta.xml
<CustomField>
    <fullName>Representante_Legal__c</fullName>
    <formula>Ubicacion_Compania__r.Representante_Legal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Representante Legal</label>
    <type>Text</type>
</CustomField>