unpackaged/main/default/objects/Plan_de_Venta__c/fields/Requiere_Pagare_Enganche__c.field-meta.xml
<CustomField>
    <fullName>Requiere_Pagare_Enganche__c</fullName>
    <formula>IF( Enganche_a_Pagar__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requiere Pagare Enganche</label>
    <type>Checkbox</type>
</CustomField>