unpackaged/main/default/objects/Plan_de_Venta__c/fields/Reubicacion__c.field-meta.xml
<CustomField>
    <fullName>Reubicacion__c</fullName>
    <formula>IF( Cantidad_de_reubicaciones__c &gt; 0 , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reubicación</label>
    <type>Checkbox</type>
</CustomField>