unpackaged/main/default/objects/Plan_de_Venta__c/fields/Reubicacion_Aux__c.field-meta.xml
<CustomField>
    <fullName>Reubicacion_Aux__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reubicación Aux</label>
    <type>Checkbox</type>
</CustomField>