unpackaged/main/default/objects/Plan_de_Venta__c/fields/Rutas_de_Aprobacion_Pendientes__c.field-meta.xml
<CustomField>
    <fullName>Rutas_de_Aprobacion_Pendientes__c</fullName>
    <formula>Total_Aprobaciones_Requeridas__c -  Total_Rutas_Aprobadas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rutas de Aprobacion Pendientes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>