unpackaged/main/default/objects/Plan_de_Venta__c/fields/Se_Ejecuto_la_1a_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Se_Ejecuto_la_1a_Aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Se Ejecuto la 1a Aprobación</label>
    <type>Checkbox</type>
</CustomField>