unpackaged/main/default/objects/Plan_de_Venta__c/fields/Sobre_Avenida__c.field-meta.xml
<CustomField>
    <fullName>Sobre_Avenida__c</fullName>
    <formula>Vivienda__r.Sobre_Avenida__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sobre Avenida</label>
    <type>Checkbox</type>
</CustomField>