unpackaged/main/default/objects/Plan_de_Venta__c/fields/Sub_UEN_Aprobaciones__c.field-meta.xml
<CustomField>
    <fullName>Sub_UEN_Aprobaciones__c</fullName>
    <formula>Oportunidad__r.Fraccionamiento__r.UEN_Sub_Aprobaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub UEN Aprobaciones</label>
    <type>Text</type>
</CustomField>