unpackaged/main/default/objects/Plan_de_Venta__c/fields/Subcuenta_Vivienda_1__c.field-meta.xml
<CustomField>
    <fullName>Subcuenta_Vivienda_1__c</fullName>
    <description>Es el importe de crédito de la precalificación/simulación que realiza el asesor al cliente cuando el trámite es solo con una Institución Financiera y el crédito es individual.</description>
    <label>Subcuenta Vivienda 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>