unpackaged/main/default/objects/Plan_de_Venta__c/fields/Subcuenta_Vivienda_2__c.field-meta.xml
<CustomField>
    <fullName>Subcuenta_Vivienda_2__c</fullName>
    <description>El usuario registrá el monto de la subcuenta de acuerdo a la precalificación del cliente</description>
    <label>Subcuenta Vivienda 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>