unpackaged/main/default/objects/Plan_de_Venta__c/fields/Subsidio_Plain_Field__c.field-meta.xml
<CustomField>
    <fullName>Subsidio_Plain_Field__c</fullName>
    <label>Subsidio Plain Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>