unpackaged/main/default/objects/Plan_de_Venta__c/fields/Suma_Total_de_Pagares__c.field-meta.xml
<CustomField>
    <fullName>Suma_Total_de_Pagares__c</fullName>
    <label>Suma Total de Pagarés</label>
    <summarizedField>Pagare_Preventa__c.Importe__c</summarizedField>
    <summaryForeignKey>Pagare_Preventa__c.Plan_de_Venta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>