unpackaged/main/default/objects/Plan_de_Venta__c/fields/Telefono_Casa_Aval__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Casa_Aval__c</fullName>
    <label>Teléfono Casa Aval</label>
    <type>Phone</type>
</CustomField>