unpackaged/main/default/objects/Plan_de_Venta__c/fields/Telefono_Celular_Aval__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Celular_Aval__c</fullName>
    <label>Teléfono Celular Aval</label>
    <type>Phone</type>
</CustomField>