unpackaged/main/default/objects/Plan_de_Venta__c/fields/Telefono_Otro_Aval__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Otro_Aval__c</fullName>
    <label>Teléfono Otro Aval</label>
    <type>Phone</type>
</CustomField>