unpackaged/main/default/objects/Plan_de_Venta__c/fields/Terreno_Excedente__c.field-meta.xml
<CustomField>
    <fullName>Terreno_Excedente__c</fullName>
    <formula>Precio_por_m2_exc__c *  M2_Excedentes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Terreno Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>