unpackaged/main/default/objects/Plan_de_Venta__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Identifica si el plan de venta es un plan convencional, o en caso de existir una reestructura, se mostrará el correspondiente como &quot;Reestructura&quot; y el original deberá cambiar a &quot;Plan de Venta Cancelado&quot;</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan de Venta</fullName>
                <default>true</default>
                <label>Plan de Venta</label>
            </value>
            <value>
                <fullName>Reestructura</fullName>
            </value>
            <value>
                <fullName>Plan de Venta Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>