unpackaged/main/default/objects/Plan_de_Venta__c/fields/Tipo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cliente__c</fullName>
    <formula>Oportunidad__r.Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Cliente</label>
    <type>Text</type>
</CustomField>