unpackaged/main/default/objects/Plan_de_Venta__c/fields/Tipo_de_Credito_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Credito_Formula__c</fullName>
    <formula>TEXT(Oportunidad__r.Tipo_de_Credito__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Crédito</label>
    <type>Text</type>
</CustomField>