unpackaged/main/default/objects/Plan_de_Venta__c/fields/Tipo_de_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Financiamiento__c</fullName>
    <formula>IF( NOT(ISNULL(Lista_de_Precios_Financiamien_Reciente__c)),
    TEXT( Lista_de_Precios_Financiamien_Reciente__r.Tipo_de_Financiamiento__c ),
			&quot;No se encontró Lista de Financiamiento&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Financiamiento</label>
    <type>Text</type>
</CustomField>