unpackaged/main/default/objects/Plan_de_Venta__c/fields/Tipo_de_Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Plan_de_Venta__c</fullName>
    <label>Tipo de Plan de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
                <default>true</default>
                <label>Original</label>
            </value>
            <value>
                <fullName>Reestructura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>