unpackaged/main/default/objects/Plan_de_Venta__c/fields/Total_Aprob_Req_Formula_Part_1__c.field-meta.xml
<CustomField>
    <fullName>Total_Aprob_Req_Formula_Part_1__c</fullName>
    <formula>TEXT(
        IF(Bonificacion_Excepcion_de_Plan_de_Venta__c, 1, 0) +
        IF(Casilla_Descuento_Empleado_Javer__c, 1, 0) +
        IF(Excepci_n_Descuento_Empleado_JVR_Formula__c, 1, 0) +
        IF(Paquetes_Promociones_de_Venta_Duplicadas__c, 1, 0) +
        IF(X1_Regalos_MKT2__c, 1, 0) +
        IF(VO_menor_a_P_Minimo_de_Venta_Formula__c, 1, 0) +
				    IF(Reubicacion__c, 1, 0) +
	       IF(Fondo_de_Garantia__c, 1, 0) +
	       IF(Financiamiento_Enganche__c, 1, 0)
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Aprob Req Formula Part 1</label>
    <type>Text</type>
</CustomField>