unpackaged/main/default/objects/Plan_de_Venta__c/fields/Total_Aprob_Req_Formula_Part_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Aprob_Req_Formula_Part_2__c</fullName>
    <formula>TEXT(
        IF(Prod_Bonif_menor_P_Min_Venta_Formula__c, 1, 0)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Aprob Req Formula Part 2</label>
    <type>Text</type>
</CustomField>