unpackaged/main/default/objects/Plan_de_Venta__c/fields/Total_Aprobaciones_Requeridas__c.field-meta.xml
<CustomField>
    <fullName>Total_Aprobaciones_Requeridas__c</fullName>
    <formula>TotalAprobReq_FormulaPart2_PlainField__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Aprobaciones Requeridas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>