unpackaged/main/default/objects/Plan_de_Venta__c/fields/Total_Cantidad_Paq_y_Promos__c.field-meta.xml
<CustomField>
    <fullName>Total_Cantidad_Paq_y_Promos__c</fullName>
    <label>Total Cantidad Paq y Promos</label>
    <summaryFilterItems>
        <field>Producto_de_Plan_de_Venta__c.Tipo_de_Producto__c</field>
        <operation>equals</operation>
        <value>Paquetes, Promociones</value>
    </summaryFilterItems>
    <summaryForeignKey>Producto_de_Plan_de_Venta__c.Plan_de_Venta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>