unpackaged/main/default/objects/Plan_de_Venta__c/fields/Total_de_Gastos_1__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Gastos_1__c</fullName>
    <formula>Gastos_Orig_Credito_1__c + Impuestos_Derechos_1__c + Gastos_de_Escritura_1__c + Avaluo_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Gastos 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>