unpackaged/main/default/objects/Plan_de_Venta__c/fields/Total_de_Gastos_2__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Gastos_2__c</fullName>
    <formula>Gastos_Orig_Credito_2__c + Impuestos_Derechos_2__c + Gastos_de_Escritura_2__c + Avaluo_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Gastos 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>