unpackaged/main/default/objects/Plan_de_Venta__c/fields/Total_de_Gastos_3__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Gastos_3__c</fullName>
    <formula>Gastos_Orig_Credito_3__c +  Impuestos_Derechos_3__c + Gastos_de_Escritura_3__c +  Avaluo_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Gastos 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>