unpackaged/main/default/objects/Plan_de_Venta__c/fields/TotalAprobReq_FormulaPart2_PlainField__c.field-meta.xml
<CustomField>
    <fullName>TotalAprobReq_FormulaPart2_PlainField__c</fullName>
    <label>Total Aprob Req Flow PlainField</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>